--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# bokeh_smith\n",
+    "# Bokeh Smith\n",
     "\n",
     "For drawing Smith Charts with Bokeh\n",
     "\n",
