--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -1,10 +1,11 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "# Bokeh Smith\n",
     "\n",
     "For drawing Smith Charts with Bokeh\n",
     "\n",
@@ -22,16 +23,13 @@
     "p=smith_chart(width=200,height=200)\n",
     "s11=np.linspace(1,.8,10)*np.exp(2*np.pi*1j*np.linspace(0,.1,10))\n",
     "p.circle(s11.real,s11.imag)\n",
-    "show(p)\n",
-    "```\n",
-    "\n",
-    "which should produce a basic Smith chart with 10 points plotted.\n"
+    "show(p)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python",
    "language": "python",
    "name": "python3"
   },
